--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#faf8ef",
-    "navigationBarTitleText": "2048 <Author: SDQ>",
+    "navigationBarTitleText": "2048 <Author: Thou>",
     "navigationBarTextStyle":"black"
   }
 }
